fixed layout on mobile

--- a/styles/Body.module.css
+++ b/styles/Body.module.css
@@ -187,7 +187,7 @@
   }
   .circleHolder {
     display: block;
-    /* padding: 5rem; */
+    padding-right: 50px;
     /* background-color: brown; */
   }
   .line {
@@ -204,7 +204,8 @@
     width: 441px;
     border-radius: 200px;
     position: relative;
-    border: 2px solid rgb(241, 241, 241);
+    /* padding-left: -30rem; */
+    /* border: 2px solid rgb(233, 19, 19); */
   }
 
   .boxShadow {
@@ -225,5 +226,14 @@
     /* margin-bottom: -4rem; */
     /* padding-bottom: 5rem; */
     /* background-color: blue; */
+  }
+  .webSection {
+   
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: aquamarine; */
   }
 }
